css changes input in th

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #193fb6; }
+  background: #560ca3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #365abd; }
+  background: #ae1ad9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #53550e; }
+  background: #f0fd9f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #599ba8; }
+  background: #dfc3d6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9d349a; }
+  background: #bef527; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f4ff9c; }
+  background: #062105; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1de3cb; }
+  background: #78fa3b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3e3990; }
+  background: #9e9204; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #988b0b; }
+  background: #0576e9; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #baf025; }
+  background: #048dd3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7f3aef; }
+  background: #874d64; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #37f67b; }
+  background: #68b46a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d3f2ea; }
+  background: #5a962c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d108f0; }
+  background: #d8b326; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1c0f5c; }
+  background: #3e4c87; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #2ee6dd; }
+  background: #8a3634; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a795d6; }
+  background: #b10291; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #260c07; }
+  background: #c5048e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #73f95f; }
+  background: #0aae74; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3380ad; }
+  background: #e7f17f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #abbd4d; }
+  background: #39be99; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #624857; }
+  background: #12754b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4fb9fa; }
+  background: #1feade; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #386295; }
+  background: #c895cf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #712c64; }
+  background: #d61906; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3180c6; }
+  background: #cf7b0c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3efaf2; }
+  background: #91f1a5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3eac7a; }
+  background: #e5500e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5f9ccc; }
+  background: #f02d37; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #82dfbb; }
+  background: #92f2b6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #943636; }
+  background: #52467b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #03a54f; }
+  background: #ce8e46; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9b5676; }
+  background: #b8e548; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1838ff; }
+  background: #7ef608; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ee8189; }
+  background: #3a692d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2d6cf1; }
+  background: #68241d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bdf084; }
+  background: #39fabe; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4410c0; }
+  background: #28bcea; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #afd959; }
+  background: #8e1386; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2b831c; }
+  background: #5d05b6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f5f688; }
+  background: #ad3036; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ad1113; }
+  background: #e59916; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #90418a; }
+  background: #017dbd; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4ff50f; }
+  background: #c3bc34; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #526a82; }
+  background: #b91897; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6e0acf; }
+  background: #11ada4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2123ec; }
+  background: #cfdb26; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #86b029; }
+  background: #c42b24; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #44cf45; }
+  background: #663278; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b606d2; }
+  background: #4c6dbb; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6614d4; }
+  background: #cf7202; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #dfea07; }
+  background: #521b86; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6df77c; }
+  background: #8912c8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #de32cd; }
+  background: #cb2d90; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4a4fed; }
+  background: #5b8ff8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d7ea63; }
+  background: #5c159b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #722ed7; }
+  background: #427129; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #53c482; }
+  background: #a10f26; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b73492; }
+  background: #f3606d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #167345; }
+  background: #f3b458; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b21523; }
+  background: #f3311d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3529df; }
+  background: #824ba2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ffe37a; }
+  background: #f045a6; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #07c0c9; }
+  background: #37d1b6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #38cf21; }
+  background: #670817; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #dbafd6; }
+  background: #0dff8a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5197a3; }
+  background: #d8f204; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #78ec4f; }
+  background: #3a9e50; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #488968; }
+  background: #5b26f2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #73d874; }
+  background: #0decab; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a254e2; }
+  background: #a30643; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c5ea75; }
+  background: #dbc864; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b81fc2; }
+  background: #643289; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9ee2b6; }
+  background: #a7af9e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c24420; }
+  background: #fe6acb; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #25e7c4; }
+  background: #bdafd2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #8de66f; }
+  background: #d9316d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7d0ef3; }
+  background: #f4a0c9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #32628c; }
+  background: #4e499d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #842f63; }
+  background: #3b707e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cc51eb; }
+  background: #2e2e48; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1a9820; }
+  background: #de2a20; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f7e79b; }
+  background: #69a7e7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5fef45; }
+  background: #584871; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #18c504; }
+  background: #bf9fbc; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #69d030; }
+  background: #737c92; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #84d626; }
+  background: #b132bb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #acc94d; }
+  background: #8dd018; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #efdc3c; }
+  background: #e3650e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #25d0da; }
+  background: #f3cd9b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #269710; }
+  background: #7ff465; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1b595a; }
+  background: #3716d0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #946182; }
+  background: #88d970; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #97f4ba; }
+  background: #8eac4f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #87d1e4; }
+  background: #046ec4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ffd8d0; }
+  background: #c308c7; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #da02d6; }
+  background: #37895b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8186e6; }
+  background: #e9d5f0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6c676b; }
+  background: #15d643; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #97b0f7; }
+  background: #ccdab6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11319,10 +11319,11 @@ input:checked + .sliders:before {
   padding-bottom: 3px; }
 
 .head-input {
-  display: flex;
-  justify-content: center;
-  height: auto !important;
-  width: auto !important; }
+  position: relative; }
+  .head-input input {
+    top: -14px;
+    position: absolute;
+    left: 12px; }
 
 .connector-config-row {
   border-radius: 15px; }
