--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #560ca3; }
+  background: #43837d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ae1ad9; }
+  background: #bb051b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f0fd9f; }
+  background: #dfacfe; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #dfc3d6; }
+  background: #74770c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bef527; }
+  background: #c7c326; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #062105; }
+  background: #8a0d82; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #78fa3b; }
+  background: #c77896; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9e9204; }
+  background: #a77f54; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0576e9; }
+  background: #b71bec; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #048dd3; }
+  background: #5f74a8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #874d64; }
+  background: #1d1356; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #68b46a; }
+  background: #c9ff47; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5a962c; }
+  background: #79a407; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d8b326; }
+  background: #e81b3f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3e4c87; }
+  background: #d42e7e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8a3634; }
+  background: #dd3564; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b10291; }
+  background: #0735a4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c5048e; }
+  background: #805907; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0aae74; }
+  background: #938414; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e7f17f; }
+  background: #49192f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #39be99; }
+  background: #605efe; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #12754b; }
+  background: #40f362; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1feade; }
+  background: #edf659; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c895cf; }
+  background: #7b799e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d61906; }
+  background: #1a66d4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #cf7b0c; }
+  background: #e91e4f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #91f1a5; }
+  background: #41d612; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e5500e; }
+  background: #968c71; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f02d37; }
+  background: #39e319; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #92f2b6; }
+  background: #5a4b8a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #52467b; }
+  background: #488da7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ce8e46; }
+  background: #8112a2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b8e548; }
+  background: #158eaf; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7ef608; }
+  background: #89f78c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3a692d; }
+  background: #a41a78; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #68241d; }
+  background: #40033a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #39fabe; }
+  background: #d4781f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #28bcea; }
+  background: #8ce9cf; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8e1386; }
+  background: #2e8cc0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5d05b6; }
+  background: #946fc4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ad3036; }
+  background: #4538ba; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e59916; }
+  background: #6f084e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #017dbd; }
+  background: #f062e6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c3bc34; }
+  background: #34d544; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b91897; }
+  background: #25fe0d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #11ada4; }
+  background: #436d67; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cfdb26; }
+  background: #a66329; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c42b24; }
+  background: #be0543; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #663278; }
+  background: #8239bb; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4c6dbb; }
+  background: #b0eb67; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cf7202; }
+  background: #f889b1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #521b86; }
+  background: #4eb403; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8912c8; }
+  background: #f134b7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #cb2d90; }
+  background: #df122b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5b8ff8; }
+  background: #e5af48; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5c159b; }
+  background: #e5417b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #427129; }
+  background: #144d75; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a10f26; }
+  background: #bea8dc; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f3606d; }
+  background: #c07476; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f3b458; }
+  background: #1ed664; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f3311d; }
+  background: #3a6176; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #824ba2; }
+  background: #c30293; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f045a6; }
+  background: #b3aa2c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #37d1b6; }
+  background: #55bc49; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #670817; }
+  background: #161ac4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0dff8a; }
+  background: #60e17d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d8f204; }
+  background: #45e121; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3a9e50; }
+  background: #a3c33f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5b26f2; }
+  background: #8a7274; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0decab; }
+  background: #22f486; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a30643; }
+  background: #af5f27; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #dbc864; }
+  background: #4fb426; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #643289; }
+  background: #404863; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a7af9e; }
+  background: #efd085; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fe6acb; }
+  background: #bacca6; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #bdafd2; }
+  background: #5d9545; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d9316d; }
+  background: #74acdd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f4a0c9; }
+  background: #bc714b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4e499d; }
+  background: #48c4f9; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #3b707e; }
+  background: #92639c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2e2e48; }
+  background: #e13bb5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #de2a20; }
+  background: #db4f37; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #69a7e7; }
+  background: #ad4d42; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #584871; }
+  background: #4e9fdb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #bf9fbc; }
+  background: #a6c982; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #737c92; }
+  background: #7de341; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b132bb; }
+  background: #479fee; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8dd018; }
+  background: #87a026; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e3650e; }
+  background: #c70dd1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f3cd9b; }
+  background: #04108e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7ff465; }
+  background: #6c206e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3716d0; }
+  background: #b0ac58; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #88d970; }
+  background: #bc05a5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8eac4f; }
+  background: #8b88c5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #046ec4; }
+  background: #8d32af; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c308c7; }
+  background: #c484a8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #37895b; }
+  background: #8fb47f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e9d5f0; }
+  background: #3aacb9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #15d643; }
+  background: #57f1a0; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ccdab6; }
+  background: #73cad8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11199,7 +11199,7 @@ input:checked + .sliders:before {
 
 .connectors-wrapper .table-innerbox {
   display: flex;
-  margin-right: 25px;
+  margin-right: 5px;
   align-items: center; }
 
 .c-green {
@@ -11263,6 +11263,12 @@ input:checked + .sliders:before {
 .modal-add-connections-wrapper {
   padding: 0px !important; }
 
+.modal-add-connections-wrapper .mr-3 {
+  margin-right: 2.3rem !important; }
+
+.role-to-txt h2 {
+  padding-left: 35px; }
+
 .modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
@@ -11307,7 +11313,7 @@ input:checked + .sliders:before {
   width: auto !important; }
 
 .modal-add-connections-wrapper .choose-file-modal {
-  width: 30%; }
+  width: 45%; }
 
 .td-wrapper {
   margin-bottom: 20px; }
